# ts-deepscan

./: .gitignore  250205_GATag.html  404.html  CHANGELOG.md  DeepScanScaleOut.drawio  DeepScanService.drawio  Dockerfile  LICENSE  README.md  SECURITY.txt  mkdocs.yml  newREADME.md  pyproject.toml  requirements.txt  setup.py  sitemap.xml  ts-deepscan
.github/workflows/: buildnPush.yml  ci.yml  scorecard.yml  shiftleft.yml
about/: index.html
adding/: index.html
docs/: about.md  adding.md  security.md  usage.md
search/: search_index.json
security/: index.html
setup_old/: MANIFEST.in  setup.py
src/ts_deepscan/: __init__.py  cli.py  config.py  util.py
src/ts_deepscan/analyser/: CachedAnalyser.py  CachingAnalyser.py  CommentAnalyser.py  CryptoAnalyser.py  Dataset.py  LicenseAnalyser.py  ScanossAnalyser.py  YaraAnalyser.py  __init__.py  licenses.json  spdx.py
src/ts_deepscan/caching/: __init__.py
src/ts_deepscan/commentparser/: language.py
src/ts_deepscan/scanner/: ParallelScanner.py  PoolExecutorScanner.py  PoolScanner.py  Scanner.py  __init__.py
ts_deepscan/: __init__.py  __main__.py  cli.py  client.py  config.py
ts_deepscan/analyser/: CommentAnalyser.py  CryptoAnalyser.py  Dataset.py  FileAnalyser.py  LicenseAnalyser.py  SourcesAnalyser.py  __init__.py  licenses.json  spdx.py  textutils.py
ts_deepscan/analyser/scancode/: __init__.py
ts_deepscan/commentparser/: __init__.py  language.py
ts_deepscan/scancode/: __init__.py
ts_deepscan/scanner/: ParallelScanner.py  Scan.py  ScanException.py  Scanner.py  __init__.py
usage/: index.html
(+8 files in other folders)
